--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "tech-blog",
   "version": "1.0.0",
   "description": "A public blog web application built with MERN stack Technologies.",
-  "main": "index.js",
   "scripts": {
     "build": "vite build",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
